--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/client-combined-3.141.59.jar"/>
@@ -20,15 +25,18 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/cobertura-2.0.3.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/cucumber-core-4.6.0.jar"/>
-	<classpathentry kind="lib" path="C:/dev/jars/cucumber-core-4.7.1.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/cucumber-html-0.2.7.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/cucumber-java-4.7.1.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/cucumber-junit-1.2.5.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/cucumber-jvm-deps-1.0.6.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/cucumber-reporting-4.8.0.jar"/>
-	<classpathentry kind="lib" path="C:/dev/jars/gherkin-5.1.0.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/hamcrest-core-2.1.jar"/>
-	<classpathentry kind="lib" path="C:/dev/jars/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="C:/dev/jars/junit-jupiter-api-5.5.0.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="C:/dev/jars/gherkin-2.12.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
